Modification Index.html - Ajout style blog

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>My Awesome Blog</title>
     <style>
+	.h1{
+		color: red;
+	}
         /**
             5) TODO: Ajouter du style à ce blog
             6) TODO:
